<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_about"
            android:title="About"/>
        <item
            android:id="@+id/nav_food_items"
            android:title="@string/menu_food_items" />
        <item
            android:id="@+id/nav_favorite_recipes"
            android:title="@string/menu_favorite_recipes" />
        <item
            android:id="@+id/nav_search_ingredients"
            android:title="@string/menu_search_ingredients" />
        <item
            android:id="@+id/nav_search_recipes"
            android:title="@string/menu_search_recipes" />

    </group>

</menu>